Made changes so that even if you enter same version it doesn't result in error

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,8 +43,12 @@ jobs:
         git config --global user.email ${{secrets.ADMIN_EMAIL}}
         git config --global user.name ${{secrets.ORG_NAME}}
         git add .
-        git commit -m "Bump version to ${{ github.event.inputs.version }}"
-        git push https://${{secrets.WORKFLOW_TOKEN}}@github.com/ingrammicro-xvantage/xi-sdk-resellers-python main
+        if git diff --exit-code; then
+          echo "No changes to commit."
+        else
+          git add .
+          git commit -m "Bump version to ${{ github.event.inputs.version }}"
+          git push https://${{secrets.WORKFLOW_TOKEN}}@github.com/ingrammicro-xvantage/xi-sdk-resellers-python main
 
     - name: Build package
       run: python -m build
