--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,8 +41,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email ${{secrets.ADMIN_EMAIL}}
-        git config --global user.name ${{secrets.ORG_NAME}}
+        git config --global user.email "${{ secrets.ADMIN_EMAIL }}"
+        git config --global user.name "${{ secrets.ORG_NAME }}"
         git add .
         if git diff --exit-code; then
           echo "No changes to commit."
