--- a/.github/workflows/publishv2.yml
+++ b/.github/workflows/publishv2.yml
@@ -82,8 +82,8 @@ jobs:
 
     - name: Commit version changes
       run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
+        git config --global user.email "${{ secrets.ADMIN_EMAIL }}"
+        git config --global user.name "${{ secrets.ORG_NAME }}"
         git add setup.py
         if git diff --staged --quiet; then
           echo "No changes to commit."
