--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ name = "xi.sdk.resellers"
 version = "1.0.0"
 description = "XI Sdk Resellers"
 authors = [
-  {name = "OpenAPI Generator Community",email = "team@openapitools.org"},
+  {name = "Ingram Micro Xvantage Integration(XI)",email = "xi_support@ingrammicro.com"},
 ]
-license = "NoLicense"
+license = "MIT"
 readme = "README.md"
-keywords = ["OpenAPI", "OpenAPI-Generator", "XI Sdk Resellers"]
+keywords = ["Ingram Micro", "XI Sdk Resellers"]
 requires-python = ">=3.9"
 
 dependencies = [
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [project.urls]
-Repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
+Repository = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"
 
 [tool.poetry]
 requires-poetry = ">=2.0"
