--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,21 +3,22 @@ name = "xi.sdk.resellers"
 version = "1.0.0"
 description = "XI Sdk Resellers"
 authors = [
-  {name = "OpenAPI Generator Community",email = "team@openapitools.org"},
+  {name = "Ingram Micro Xvantage Integration(XI)",email = "xi_support@ingrammicro.com"},
 ]
+license = "MIT"
 readme = "README.md"
-keywords = ["OpenAPI", "OpenAPI-Generator", "XI Sdk Resellers"]
+keywords = ["Ingram Micro", "XI Sdk Resellers"]
 requires-python = ">=3.9"
 
 dependencies = [
   "urllib3 (>=2.1.0,<3.0.0)",
   "python-dateutil (>=2.8.2)",
   "pydantic (>=2)",
-  "typing-extensions (>=4.7.1)",
+  "typing-extensions (>=4.7.1)"
 ]
 
 [project.urls]
-Repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
+Repository = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"
 
 [tool.poetry]
 requires-poetry = ">=2.0"
