--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "xi.sdk.resellers"
-version = "1.2.1"  # Updated from 1.0.0 to match setup.py
+version = "1.3.0"  
 description = "Ingram Micro - Xvantage Integration (XI) Python Server-side SDK."  # Longer description from setup.py
 authors = [
   {name = "Ingram Micro Xvantage Integration(XI)", email = "xi_support@ingrammicro.com"},
 ]
-license = {text = "MIT"}  # Explicit for clarity; matches setup.py
+license = {text = "MIT"}  
 readme = "README.md"
 # long_description_content_type = "text/markdown"  # Add this; inferred from readme but explicit is better for PyPI
 keywords = ["xvantage", "ingrammicro", "resellerapi", "xvantage integration"]  # Updated to match setup.py (replaces previous)
