--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,21 @@
 [project]
 name = "xi.sdk.resellers"
-version = "1.3.0"  
-description = "Ingram Micro - Xvantage Integration (XI) Python Server-side SDK."  # Longer description from setup.py
+version = "1.3.0"
+description = "Ingram Micro - Xvantage Integration (XI) Python Server-side SDK."
 authors = [
   {name = "Ingram Micro Xvantage Integration(XI)", email = "xi_support@ingrammicro.com"},
 ]
-license = {text = "MIT"}  
+license = {text = "MIT"}
 readme = "README.md"
-# long_description_content_type = "text/markdown"  # Add this; inferred from readme but explicit is better for PyPI
-keywords = ["xvantage", "ingrammicro", "resellerapi", "xvantage integration"]  # Updated to match setup.py (replaces previous)
-requires-python = ">=3.8"  # Relaxed from >=3.9 to match setup.py
+keywords = ["xvantage", "ingrammicro", "resellerapi", "xvantage integration"]
+requires-python = ">=3.8"
 dependencies = [
-  "urllib3 (>=2.1.0,<3.0.0)",  # Matches REQUIRES
+  "urllib3 (>=2.1.0,<3.0.0)",
   "python-dateutil (>=2.8.2)",
   "pydantic (>=2)",
   "typing-extensions (>=4.7.1)",
 ]
-
-[project.urls]
-Repository = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"  # Existing
-Homepage = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"  # Add; common for PyPI
-Download = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/archive/1.2.1.tar.gz"  # Updated version; from setup.py
-"Release Notes" = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/releases/"  # From setup.py
-
-classifiers = [  # Full list from setup.py for better PyPI discoverability
+classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
@@ -36,5 +28,11 @@ classifiers = [  # Full list from setup.py for better PyPI discoverability
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
-    "Topic :: Internet :: WWW/HTTP",  # Added for API relevance
+    "Topic :: Internet :: WWW/HTTP"
 ]
+
+[project.urls]
+repository = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"
+homepage = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"
+download = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/archive/1.3.0.tar.gz"
+release-notes = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/releases/"
