--- a/.github/workflows/publishv2.yml
+++ b/.github/workflows/publishv2.yml
@@ -1,81 +1,94 @@
-name: Python Package Publishing (V2)
+name: Python SDK Deployment & Release
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Enter the new version for the package'
+        description: 'Enter the version to deploy/release'
         required: true
+      publish_package:
+        description: 'Set true to build and publish package to PyPI'
+        required: false
+        default: false
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-
+    outputs:
+      deployed_version: ${{ steps.set_version.outputs.version }}
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Set version output
+        id: set_version
+        run: |
+          echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build --no-cache-dir
+      - name: Deploy SDK (manual/record)
+        run: |
+          echo "Deployed version ${{ github.event.inputs.version }} successfully"
 
-    - name: Update version in pyproject.toml
-      run: |
-        sed -i "s/^version = \".*\"/version = \"${{ github.event.inputs.version }}\"/" pyproject.toml
+  publish-package:
+    needs: deploy
+    if: ${{ github.event.inputs.publish_package == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Update download URL in pyproject.toml
-      run: |
-        latest_version="${{ github.event.inputs.version }}"
-        latest_download_url="https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/archive/${latest_version}.tar.gz"
-        sed -i "s|Download = \".*\"|Download = \"${latest_download_url}\"|" pyproject.toml
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.email "${{ secrets.ADMIN_EMAIL }}"
-        git config --global user.name "${{ secrets.ORG_NAME }}"
-        git add pyproject.toml
-        if git diff --cached --quiet; then
-          echo "No changes to commit."
-        else
-          git commit -m "Bump version to ${{ github.event.inputs.version }}"
-          git push https://${{ secrets.WORKFLOW_TOKEN }}@github.com/ingrammicro-xvantage/xi-sdk-resellers-python main
-        fi
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build --no-cache-dir
 
-    - name: Build package
-      run: python -m build
+      - name: Update version in pyproject.toml
+        run: |
+          sed -i "s/^version = \".*\"/version = \"${{ github.event.inputs.version }}\"/" pyproject.toml
 
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_TOKEN }}
+      - name: Build package
+        run: python -m build
 
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: "v${{ github.event.inputs.version }}"
-        name: "v${{ github.event.inputs.version }} Release"
-        body: "Published Python SDK version ${{ github.event.inputs.version }}"
-      env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
 
-    - name: Create GitHub Deployment
-      if: success()
-      env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
-      run: |
-        TAG_NAME="v${{ github.event.inputs.version }}"
-        gh deployment create "$TAG_NAME" \
-          --ref "$GITHUB_SHA" \
-          --description "Published Python SDK version $TAG_NAME" \
-          --environment "production" \
-          --auto-inactive
+  release-and-deployment:
+    needs: [deploy, publish-package]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: "v${{ github.event.inputs.version }}"
+          name: "v${{ github.event.inputs.version }} Release"
+          body: "Python SDK version ${{ github.event.inputs.version }} deployed successfully"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Deployment entry in GitHub
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/deployments \
+            -d @- << EOF
+          {
+            "ref": "${GITHUB_SHA}",
+            "environment": "production",
+            "description": "Python SDK version v${{ github.event.inputs.version }} deployed successfully",
+            "auto_merge": false,
+            "required_contexts": []
+          }
