--- a/.github/workflows/publishv2.yml
+++ b/.github/workflows/publishv2.yml
@@ -6,16 +6,20 @@ on:
       version:
         description: 'Enter the version to deploy/release'
         required: true
+      deploy_only:
+        description: 'Set true to skip building/publishing and only create deployment & release'
+        required: false
+        default: false
       publish_package:
         description: 'Set true to build and publish package to PyPI'
         required: false
         default: false
 
 jobs:
-  deploy:
+  deploy-release:
     runs-on: ubuntu-latest
-    outputs:
-      deployed_version: ${{ steps.set_version.outputs.version }}
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,47 +29,19 @@ jobs:
         run: |
           echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
 
-      - name: Deploy SDK (manual/record)
-        run: |
-          echo "Deployed version ${{ github.event.inputs.version }} successfully"
-
-  publish-package:
-    needs: deploy
-    if: ${{ github.event.inputs.publish_package == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
+      - name: Optional Build & Publish Package
+        if: ${{ github.event.inputs.publish_package == 'true' && github.event.inputs.deploy_only == 'false' }}
         run: |
           python -m pip install --upgrade pip
-          pip install build --no-cache-dir
-
-      - name: Update version in pyproject.toml
-        run: |
+          pip install build --no-cache-dir twine
           sed -i "s/^version = \".*\"/version = \"${{ github.event.inputs.version }}\"/" pyproject.toml
+          python -m build
+          python -m twine upload dist/* -u __token__ -p ${{ secrets.PYPI_TOKEN }}
 
-      - name: Build package
-        run: python -m build
-
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
-
-  release-and-deployment:
-    needs: [deploy, publish-package]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Create Git tag for version
+        run: |
+          git tag -fa "v${{ github.event.inputs.version }}" -m "Tag for version ${{ github.event.inputs.version }}"
+          git push origin "v${{ github.event.inputs.version }}" --force
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -76,7 +52,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Deployment entry in GitHub
+      - name: Create GitHub Deployment
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -86,7 +62,7 @@ jobs:
             https://api.github.com/repos/${{ github.repository }}/deployments \
             -d @- << EOF
           {
-            "ref": "${GITHUB_SHA}",
+            "ref": "v${{ github.event.inputs.version }}",
             "environment": "production",
             "description": "Python SDK version v${{ github.event.inputs.version }} deployed successfully",
             "auto_merge": false,
