--- a/.github/workflows/publishv2.yml
+++ b/.github/workflows/publishv2.yml
@@ -73,7 +73,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             https://api.github.com/repos/${{ github.repository }}/deployments \
-            -d @- << EOF | jq -r '.id'
+            -d @- << EOF
           {
             "ref": "v${{ github.event.inputs.version }}",
             "environment": "production",
@@ -82,6 +82,7 @@ jobs:
             "required_contexts": []
           }
 EOF
+            | jq -r '.id'
           )
 
           # Mark deployment as success
